terraform/main.tf
# Common tag
locals {
  common_tags = {
    Name   = var.Base_NAME
    Author = var.Author_name
    Email  = var.Author_mail
  }
}

# Create own VPC for Elastic Beanstalk service
resource "aws_vpc" "terraform-vpc" {
  cidr_block = "10.0.0.0/16"

  tags = local.common_tags
}

# Create Internet Gateway
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.terraform-vpc.id

  tags = local.common_tags
}

# Create Route Table
resource "aws_route_table" "terraform-route-table" {
  vpc_id = aws_vpc.terraform-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  route {
    ipv6_cidr_block = "::/0"
    gateway_id      = aws_internet_gateway.gw.id
  }

  tags = local.common_tags
}

# Create a subnet
resource "aws_subnet" "terraform-subnet" {
  vpc_id            = aws_vpc.terraform-vpc.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "${var.AWS_REGION}a"

  tags = local.common_tags
}

# Associate subnet with Route Table
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.terraform-subnet.id
  route_table_id = aws_route_table.terraform-route-table.id
}

# Create Security Group to allow port 22, 80, 443
resource "aws_security_group" "terraform-sg" {
  name        = "terraform-sg"
  description = "Allow TLS inbound traffic"
  vpc_id      = aws_vpc.terraform-vpc.id

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = local.common_tags
}

# Create Network Interface
resource "aws_network_interface" "terraform-web-server" {
  subnet_id       = aws_subnet.terraform-subnet.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.terraform-sg.id]

  tags = local.common_tags
}

# Assign an Elastic IP to Network Interface we were created
resource "aws_eip" "one" {
  vpc                       = true
  network_interface         = aws_network_interface.terraform-web-server.id
  associate_with_private_ip = "10.0.1.50"
  depends_on                = [aws_internet_gateway.gw]

  tags = local.common_tags
}

# Create EC2 instance - Ubuntu server 20.04 LTS
resource "aws_instance" "terraform-instance" {
  ami               = var.AWS_AMIS[var.AWS_REGION]
  instance_type     = "t2.micro"
  availability_zone = "${var.AWS_REGION}a"
  key_name          = "terraform-mock-project"

  network_interface {
    device_index         = 0
    network_interface_id = aws_network_interface.terraform-web-server.id
  }

  user_data = <<-EOF
              #!bin/bash
              sudo apt update -y
              sudo apt install python3 -y
              EOF

  tags = local.common_tags
}
